--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <section class="presentation">
                 <h1 class="presentation__title">Réservez le menu qui<br> vous convient</h1>
                 <p>Découvrez des restaurants d'exception,<br> sélectionnés par nos soins.</p>
-                <button class="action_button">Explorer nos restaurants</button>
+                <button class="action_button"><div>Explorer nos restaurants</div></button>
             </section>
             <section class="fonctionnement">
                 <div>
@@ -68,7 +68,7 @@
                                 </div>
                             </article>
                         </a>
-                        <a href="#">
+                        <a href="./restaurants/la_note_enchantee.html">
                             <article class="card">
                                 <span class="card_tag">Nouveau</span>
                                 <img class="card_image" src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
@@ -86,7 +86,7 @@
                                 </div>
                             </article>
                         </a>
-                        <a href="#">
+                        <a href="./restaurants/a_la_francaise.html">
                             <article class="card">
                                 <img class="card_image" src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
                                 <div class="card-content">
@@ -103,7 +103,7 @@
                                 </div>
                             </article>
                         </a>
-                        <a href="#">
+                        <a href="./restaurants/le_delice_des_sens.html">
                             <article class="card">
                                 <img class="card_image" src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
                                 <div class="card-content">
