--- a/restaurants/la_palette_du_gout.html
+++ b/restaurants/la_palette_du_gout.html
@@ -104,7 +104,7 @@
                                     <div class="card-content">
                                         <div class="card-txt">
                                             <h3 class="card-title">Parmentier de queue de boeuf</h3>
-                                            <p class="card-subtitle">A la truffe noire sur sa purée de panais</p>
+                                            <p class="card-subtitle">À la truffe noire sur sa purée de panais</p>
                                         </div>
                                         <div class="card-price">
                                             <p>35€</p>
@@ -174,19 +174,19 @@
                             </a>
                         </section>
                         <div class="command_action">
-                            <button class="action_button">Commander</button>
+                            <button class="action_button"><div>Commander</div></button>
                         </div>
                     </div>
                 </div>
             </div>
         </main>
-        <footer class="footer menu__footer">
+        <footer class="footer">
             <h2 class="footer_title">ohmyfood</h2>
             <ul class="footer_list">
                 <li><a href=""><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
                 <li><a href=""><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
-                <li><a href="">Mentions légales</a></li>
-                <li><a href="">Contact</a></li>
+                <li class="footer_last_links"><a href="">Mentions légales</a></li>
+                <li class="footer_last_links"><a href="">Contact</a></li>
             </ul>
         </footer>
     </div>
