--- a/restaurants/a_la_francaise.html
+++ b/restaurants/a_la_francaise.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ohmyfood - La Palette du goût</title>
+    <title>Ohmyfood - À la française</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
@@ -28,10 +28,10 @@
         </header>
         <main>
             <div class="menu">
-                <img  class="menu__page__image" src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                <img  class="menu__page__image" src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
                 <div class="menu__container">
                     <div class="menu__header">
-                        <h1 class="menu__title">La palette du goût</h1>
+                        <h1 class="menu__title">À la française</h1>
                         <button class="icon-button">
                             <i class="fa-regular fa-heart icon-default"></i>
                             <i class="fa-solid fa-heart icon-hover"></i>
@@ -44,8 +44,8 @@
                                 <article class="card">
                                     <div class="card-content">
                                         <div class="card-txt">
-                                            <h3 class="card-title">Fricassée d'escargots</h3>
-                                            <p class="card-subtitle">Au piment d'Espelette</p>
+                                            <h3 class="card-title">Tartare de poulpe acidulé</h3>
+                                            <p class="card-subtitle">Aux zestes d'orange</p>
                                         </div>
                                         <div class="card-price">
                                             <p>25€</p>
@@ -58,8 +58,8 @@
                                 <article class="card">
                                     <div class="card-content">
                                         <div class="card-txt">
-                                            <h3 class="card-title">Foie gras de canard mi-cuit</h3>
-                                            <p class="card-subtitle">Et ses copeaux de truffe noire</p>
+                                            <h3 class="card-title">Velouté de légumes d'antan</h3>
+                                            <p class="card-subtitle">Carotte, panais, topinambour</p>
                                         </div>
                                         <div class="card-price">
                                             <p>35€</p>
@@ -72,8 +72,8 @@
                                 <article class="card">
                                     <div class="card-content">
                                         <div class="card-txt">
-                                            <h3 class="card-title">Œuf au plat</h3>
-                                            <p class="card-subtitle">Assaissoné à la truffe sur lit de caviar</p>
+                                            <h3 class="card-title">Soupe à l'oignon</h3>
+                                            <p class="card-subtitle">Revisitée</p>
                                         </div>
                                         <div class="card-price">
                                             <p>20€</p>
@@ -89,8 +89,8 @@
                                 <article class="card">
                                     <div class="card-content">
                                         <div class="card-txt">
-                                            <h3 class="card-title">Filet de boeuf aux herbes</h3>
-                                            <p class="card-subtitle">Accompagné de sa ribambelle de légumes</p>
+                                            <h3 class="card-title">Coquilles Saint-Jacques</h3>
+                                            <p class="card-subtitle">Accompagnées d'une purée de panais</p>
                                         </div>
                                         <div class="card-price">
                                             <p>40€</p>
@@ -103,8 +103,8 @@
                                 <article class="card">
                                     <div class="card-content">
                                         <div class="card-txt">
-                                            <h3 class="card-title">Parmentier de queue de boeuf</h3>
-                                            <p class="card-subtitle">À la truffe noire sur sa purée de panais</p>
+                                            <h3 class="card-title">Magret de canard</h3>
+                                            <p class="card-subtitle">Et parmentier de pommes de terre</p>
                                         </div>
                                         <div class="card-price">
                                             <p>35€</p>
@@ -117,8 +117,8 @@
                                 <article class="card">
                                     <div class="card-content">
                                         <div class="card-txt">
-                                            <h3 class="card-title">Filet de turbot</h3>
-                                            <p class="card-subtitle">Aux agrumes</p>
+                                            <h3 class="card-title">Pigeonneau d'Ille-et-Vilaine</h3>
+                                            <p class="card-subtitle">Sur son lit de gnocchis aux légumes</p>
                                         </div>
                                         <div class="card-price">
                                             <p>44€</p>
@@ -134,8 +134,8 @@
                                 <article class="card">
                                     <div class="card-content">
                                         <div class="card-txt">
-                                            <h3 class="card-title">Paris-Brest</h3>
-                                            <p class="card-subtitle">Revisité</p>
+                                            <h3 class="card-title">Pétales de violettes glacés</h3>
+                                            <p class="card-subtitle">Et purée de noisettes</p>
                                         </div>
                                         <div class="card-price">
                                             <p>18€</p>
@@ -148,8 +148,8 @@
                                 <article class="card">
                                     <div class="card-content">
                                         <div class="card-txt">
-                                            <h3 class="card-title">Macaron au chocolat d'exception</h3>
-                                            <p class="card-subtitle">Et glace à la vanille de Madagascar</p>
+                                            <h3 class="card-title">Fondant au chocolat</h3>
+                                            <p class="card-subtitle">Revisité</p>
                                         </div>
                                         <div class="card-price">
                                             <p>22€</p>
@@ -162,8 +162,8 @@
                                 <article class="card">
                                     <div class="card-content">
                                         <div class="card-txt">
-                                            <h3 class="card-title">Mousse au chocolat</h3>
-                                            <p class="card-subtitle">Au piment d'Espelette et à la truffe noire</p>
+                                            <h3 class="card-title">Millefeuille croustillant</h3>
+                                            <p class="card-subtitle">Myrtilles et pâtes d'amande</p>
                                         </div>
                                         <div class="card-price">
                                             <p>23€</p>
