--- a/restaurants/la_note_enchantee.html
+++ b/restaurants/la_note_enchantee.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ohmyfood - La Palette du goût</title>
+    <title>Ohmyfood - La Note enchantée</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
@@ -28,10 +28,10 @@
         </header>
         <main>
             <div class="menu">
-                <img  class="menu__page__image" src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                <img  class="menu__page__image" src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
                 <div class="menu__container">
                     <div class="menu__header">
-                        <h1 class="menu__title">La palette du goût</h1>
+                        <h1 class="menu__title">La note enchantée</h1>
                         <button class="icon-button">
                             <i class="fa-regular fa-heart icon-default"></i>
                             <i class="fa-solid fa-heart icon-hover"></i>
@@ -44,8 +44,8 @@
                                 <article class="card">
                                     <div class="card-content">
                                         <div class="card-txt">
-                                            <h3 class="card-title">Fricassée d'escargots</h3>
-                                            <p class="card-subtitle">Au piment d'Espelette</p>
+                                            <h3 class="card-title">Ravioles de foie gras</h3>
+                                            <p class="card-subtitle">Accompagnées de leur crème à la truffe</p>
                                         </div>
                                         <div class="card-price">
                                             <p>25€</p>
@@ -58,8 +58,8 @@
                                 <article class="card">
                                     <div class="card-content">
                                         <div class="card-txt">
-                                            <h3 class="card-title">Foie gras de canard mi-cuit</h3>
-                                            <p class="card-subtitle">Et ses copeaux de truffe noire</p>
+                                            <h3 class="card-title">Caviar osciètre</h3>
+                                            <p class="card-subtitle">Sur blini à la farine de blé noir</p>
                                         </div>
                                         <div class="card-price">
                                             <p>35€</p>
@@ -72,11 +72,25 @@
                                 <article class="card">
                                     <div class="card-content">
                                         <div class="card-txt">
-                                            <h3 class="card-title">Œuf au plat</h3>
-                                            <p class="card-subtitle">Assaissoné à la truffe sur lit de caviar</p>
+                                            <h3 class="card-title">Homard et espuma de potiron</h3>
+                                            <p class="card-subtitle">Marinés aux zestes d'orange</p>
                                         </div>
                                         <div class="card-price">
                                             <p>20€</p>
+                                        </div>
+                                    </div>
+                                    <div class="checkmark"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
+                                </article>
+                            </a>
+                            <a href="">
+                                <article class="card">
+                                    <div class="card-content">
+                                        <div class="card-txt">
+                                            <h3 class="card-title">Foie gras de canard cuit entier</h3>
+                                            <p class="card-subtitle">Confiture de figue et pain toasté</p>
+                                        </div>
+                                        <div class="card-price">
+                                            <p>35€</p>
                                         </div>
                                     </div>
                                     <div class="checkmark"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
@@ -89,8 +103,8 @@
                                 <article class="card">
                                     <div class="card-content">
                                         <div class="card-txt">
-                                            <h3 class="card-title">Filet de boeuf aux herbes</h3>
-                                            <p class="card-subtitle">Accompagné de sa ribambelle de légumes</p>
+                                            <h3 class="card-title">Noix de coquilles Saint-Jacques</h3>
+                                            <p class="card-subtitle">Sur lit de purée de céleri-rave</p>
                                         </div>
                                         <div class="card-price">
                                             <p>40€</p>
@@ -103,8 +117,8 @@
                                 <article class="card">
                                     <div class="card-content">
                                         <div class="card-txt">
-                                            <h3 class="card-title">Parmentier de queue de boeuf</h3>
-                                            <p class="card-subtitle">À la truffe noire sur sa purée de panais</p>
+                                            <h3 class="card-title">Langoustine poêlée</h3>
+                                            <p class="card-subtitle">Purée de patate douce</p>
                                         </div>
                                         <div class="card-price">
                                             <p>35€</p>
@@ -117,11 +131,11 @@
                                 <article class="card">
                                     <div class="card-content">
                                         <div class="card-txt">
-                                            <h3 class="card-title">Filet de turbot</h3>
-                                            <p class="card-subtitle">Aux agrumes</p>
+                                            <h3 class="card-title">Mijotée de queue de boeuf</h3>
+                                            <p class="card-subtitle">Et riz sauvage aux zestes de citron</p>
                                         </div>
                                         <div class="card-price">
-                                            <p>44€</p>
+                                            <p>45€</p>
                                         </div>
                                     </div>
                                     <div class="checkmark"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
@@ -134,8 +148,8 @@
                                 <article class="card">
                                     <div class="card-content">
                                         <div class="card-txt">
-                                            <h3 class="card-title">Paris-Brest</h3>
-                                            <p class="card-subtitle">Revisité</p>
+                                            <h3 class="card-title">Macaron noisette et chocolat</h3>
+                                            <p class="card-subtitle">Glace au caramel brun et sel de Guérande</p>
                                         </div>
                                         <div class="card-price">
                                             <p>18€</p>
@@ -148,8 +162,8 @@
                                 <article class="card">
                                     <div class="card-content">
                                         <div class="card-txt">
-                                            <h3 class="card-title">Macaron au chocolat d'exception</h3>
-                                            <p class="card-subtitle">Et glace à la vanille de Madagascar</p>
+                                            <h3 class="card-title">Baba au rhum revisité</h3>
+                                            <p class="card-subtitle">Avec son coulis de citron</p>
                                         </div>
                                         <div class="card-price">
                                             <p>22€</p>
@@ -162,8 +176,8 @@
                                 <article class="card">
                                     <div class="card-content">
                                         <div class="card-txt">
-                                            <h3 class="card-title">Mousse au chocolat</h3>
-                                            <p class="card-subtitle">Au piment d'Espelette et à la truffe noire</p>
+                                            <h3 class="card-title">Tarte au citron meringuée</h3>
+                                            <p class="card-subtitle">Déstructurée</p>
                                         </div>
                                         <div class="card-price">
                                             <p>23€</p>
