--- a/restaurants/le_delice_des_sens.html
+++ b/restaurants/le_delice_des_sens.html
@@ -18,7 +18,7 @@
 
 <body>
     <div class="main-container">
-        <header class="header menu__header">
+        <header class="header">
             <div class="header__logo">
                 <a href="../index.html" class="header__back-button">
                     <i class="fa fa-arrow-left"></i>
