--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <title>Ohmyfood</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
@@ -60,7 +57,7 @@
                                         <p class="card-subtitle">Ménilmontant</p>
                                     </div>
                                     <div>
-                                        <button class="icon-button">
+                                        <button class="like_icon">
                                             <i class="fa-regular fa-heart icon-default"></i>
                                             <i class="fa-solid fa-heart icon-hover"></i>
                                         </button>
@@ -78,7 +75,7 @@
                                         <p class="card-subtitle">Charonne</p>
                                     </div>
                                     <div>
-                                        <button class="icon-button">
+                                        <button class="like_icon">
                                             <i class="fa-regular fa-heart icon-default"></i>
                                             <i class="fa-solid fa-heart icon-hover "></i>
                                         </button>
@@ -95,7 +92,7 @@
                                         <p class="card-subtitle">Cité Rouge</p>
                                     </div>
                                     <div>
-                                        <button class="icon-button">
+                                        <button class="like_icon">
                                             <i class="fa-regular fa-heart icon-default"></i>
                                             <i class="fa-solid fa-heart icon-hover "></i>
                                         </button>
@@ -112,7 +109,7 @@
                                         <p class="card-subtitle">Folie-Méricourt</p>
                                     </div>
                                     <div>
-                                        <button class="icon-button">
+                                        <button class="like_icon">
                                             <i class="fa-regular fa-heart icon-default"></i>
                                             <i class="fa-solid fa-heart icon-hover "></i>
                                         </button>
