--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                 <img class="card_image" src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
                                 <div class="card-content">
                                     <div class="card-txt">
-                                        <h3 class="card-title">A la française</h3>
+                                        <h3 class="card-title">À la française</h3>
                                         <p class="card-subtitle">Cité Rouge</p>
                                     </div>
                                     <div>
