validator html + css ok

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="main-container">
         <div class="loading">
-            <img class="loading-image" src="./images/Eclipse-1s-200px.svg" alt="Chargement..." />
+            <img class="loading-image" src="./images/Eclipse-1s-200px.svg" alt="Chargement...">
           </div>
         <header class="header">
             <div class="header__logo">
@@ -24,14 +24,14 @@
             </div>
             <div class="location">
                 <i class="fas fa-map-marker-alt"></i>
-                <span>Paris, Belleville</i></span>
+                <span>Paris, Belleville</span>
             </div>
         </header>
         <main>
             <section class="presentation">
                 <h1 class="presentation__title">Réservez le menu qui<br> vous convient</h1>
                 <p>Découvrez des restaurants d'exception,<br> sélectionnés par nos soins.</p>
-                <button class="action_button"><div>Explorer nos restaurants</div></button>
+                <button class="action_button"><span>Explorer nos restaurants</span></button>
             </section>
             <section class="fonctionnement">
                 <div>
@@ -57,10 +57,10 @@
                                         <p class="card-subtitle">Ménilmontant</p>
                                     </div>
                                     <div>
-                                        <button class="like_icon">
+                                        <div class="like_icon">
                                             <i class="fa-regular fa-heart icon-default"></i>
                                             <i class="fa-solid fa-heart icon-hover"></i>
-                                        </button>
+                                        </div>
                                     </div>
                                 </div>
                             </article>
@@ -75,10 +75,10 @@
                                         <p class="card-subtitle">Charonne</p>
                                     </div>
                                     <div>
-                                        <button class="like_icon">
+                                        <div class="like_icon">
                                             <i class="fa-regular fa-heart icon-default"></i>
                                             <i class="fa-solid fa-heart icon-hover "></i>
-                                        </button>
+                                        </div>
                                     </div>
                                 </div>
                             </article>
@@ -92,10 +92,10 @@
                                         <p class="card-subtitle">Cité Rouge</p>
                                     </div>
                                     <div>
-                                        <button class="like_icon">
+                                        <div class="like_icon">
                                             <i class="fa-regular fa-heart icon-default"></i>
                                             <i class="fa-solid fa-heart icon-hover "></i>
-                                        </button>
+                                        </div>
                                     </div>
                                 </div>
                             </article>
@@ -109,10 +109,10 @@
                                         <p class="card-subtitle">Folie-Méricourt</p>
                                     </div>
                                     <div>
-                                        <button class="like_icon">
+                                        <div class="like_icon">
                                             <i class="fa-regular fa-heart icon-default"></i>
                                             <i class="fa-solid fa-heart icon-hover "></i>
-                                        </button>
+                                        </div>
                                     </div>
                                 </div>
                             </article>
