--- a/restaurants/la_note_enchantee.html
+++ b/restaurants/la_note_enchantee.html
@@ -185,7 +185,7 @@
                             </a>
                         </section>
                         <div class="command_action">
-                            <button class="action_button"><div>Commander</div></button>
+                            <button class="action_button"><span>Commander</span></button>
                         </div>
                     </div>
                 </div>
